Fixed mix-wrap

--- a/source/less/modules/index-content.less
+++ b/source/less/modules/index-content.less
@@ -39,42 +39,45 @@
 .mix {
   position: relative;
   display: none;
-  padding: 0;
+  padding: 5px;
   transform: translateZ(0);
   backface-visibility: hidden;
   transition-property: color;
   transition-duration: 0.5s;
+    .mix-wrap {
+    position: relative;
+    width: 100%;
+  }
   img {
     width: 100%;
     height: auto;
   }
-}
-
-.mix-tooltip {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  background-color: rgba(0,0,0,.8);
-  transform: scaleY(0);
-  transform-origin: 50% 0;
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-  h3 {
-    text-transform: uppercase;
-    font-weight: 400;
-  }
-  .tooltip-wrap {
-    padding: 10px 20px;
-    padding-top: 10%;
+  .mix-tooltip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgba(0,0,0,.8);
+    transform: scaleY(0);
+    transform-origin: 50% 0;
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-out;
+    h3 {
+      text-transform: uppercase;
+      font-weight: 400;
+    }
+    .tooltip-wrap {
+      padding: 10px 20px;
+      padding-top: 10%;
+    }
   }
 }
 
 #container-mix .col-xs-6 {
-  @media (max-width: @min-width) {
+  @media (max-width: @screen-xs) {
     width: 100%;
   }
 }
