--- a/source/less/state.less
+++ b/source/less/state.less
@@ -1,4 +1,5 @@
 a:hover {
+  color: #fff;
   text-shadow: 0 0 1px #fff,
                0 0 3px @color-light;
 }
@@ -20,6 +21,7 @@ a:hover {
 }
 
 .btn:hover, .btn:focus {
+  text-decoration: none;
   outline: none;
   box-shadow: 0 0 1px 1px #fff,
               0 0 3px 1px @color-light;
